# beahpong

./: CMakeLists.txt  README.md
kicad/: beahpong-cache.lib  beahpong.dcm  beahpong.kicad_pcb  beahpong.lib  beahpong.pro  beahpong.sch  fp-lib-table  sym-lib-table
kicad/beahpong.pretty/: MountingHole_2.75mm_M2.5_Land_6.2mm.kicad_mod
lkm/: CMakeLists.txt  Kbuild  beahpong.c  beahpong.dts
ui/: CMakeLists.txt  main.cpp
